Updated README with simpler java commands